--- a/main/Makefile
+++ b/main/Makefile
@@ -3,6 +3,6 @@ all:
 clean:
 	rm -f sim
 run:
-	gcc -g -o sim *.c && ./sim ../programs/program_1.txt
+	gcc -g -o sim *.c && ./sim ../programs/program_4.txt > prog4.txt
 test:
 	gcc -g -o test test.c && ./test && rm -f test
