--- a/main/Makefile
+++ b/main/Makefile
@@ -3,9 +3,8 @@ all:
 clean:
 	rm -f sim
 run:
-	gcc -g -o sim *.c && ./sim ../programs/program_4.txt > prog4.txt
+	gcc -g -o sim *.c && ./sim ../programs/program_3.txt > ../logs/my_prog3.txt && diff -iw ../logs/my_prog3.txt ../logs/program3_pipeline.txt
 test:
 	gcc -g -o test test.c && ./test && rm -f test
-
 nt:
 	gcc -g -o nt new_test.c && ./nt && rm -f nt
