--- a/main/Makefile
+++ b/main/Makefile
@@ -3,7 +3,7 @@ all:
 clean:
 	rm -f sim
 run:
-	gcc -g -o sim *.c && ./sim ../programs/program_4.txt > ../logs/mycase4_pipeline.txt && diff -iw ../logs/mycase4_pipeline.txt ../logs/case4_pipeline.txt
+	gcc -g -o sim *.c && ./sim ../programs/program_4.txt > ../logs/mycase4_pipeline.txt
 test:
 	gcc -g -o test test.c && ./test && rm -f test
 nt:
